refactor(home page) : Big home page refactoring
- Changing main theme
- Reworked tooltip & few components
- Add modal folder
- Splitted components to subcomponents

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -20,6 +20,6 @@ $homeMainBg: rgba(22, 22, 22, 0.85);
 $leftGradientCurrencyPage: #d7dde8;
 $rightGradientCurrencyPage: #757f9a;
 
-$creamy: #f8edeb;
+$creamy: rgba(248, 237, 235, 0.8);
 // $marketFooterBg: rgba(255, 255, 255, 0.1);
 $marketFooterBg: lighten($white, 20%);
