refactor(currency page): Big currency page refactoring
- Splitted components to subcomponents
- Add  useHooks (currency page)

--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -23,3 +23,6 @@ $rightGradientCurrencyPage: #757f9a;
 $creamy: rgba(248, 237, 235, 0.8);
 // $marketFooterBg: rgba(255, 255, 255, 0.1);
 $marketFooterBg: lighten($white, 20%);
+
+$headerHeight: 201px;
+$footerHeight: 56px;
