--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,3 +1,6 @@
+@import "@/assets/scss/adaptive-value-mixin";
+
+//* Default colors
 $red: rgb(187, 36, 36);
 $lightRed: #e15554;
 $green: #198754;
@@ -6,23 +9,33 @@ $darkGrey: rgba(22, 22, 22, 1);
 $lightGrey: #484444;
 $white8: rgba(255, 255, 255, 0.8);
 $green8: rgba(82, 221, 156, 0.8);
+$creamy: rgba(248, 237, 235, 0.8);
 
-//* color page during transtion
+//* Element colors
 $transitionColor: #9a8c98;
 $paginationBg: #f0e6ef;
 $paginationActive: #bcd4e6;
-$modalOverlay: rgba(22, 22, 22, 0.5);
 $trashBtnColor: rgba(0, 0, 0, 0.6);
 $trashBtnColorHover: rgba(0, 0, 0, 1);
 $modalBagBg: rgba(22, 22, 22, 0.6);
 $modalBuyBg: rgba(22, 22, 22, 0.6);
+$modalOverlay: rgba(22, 22, 22, 0.5);
+$navbarBg: rgba(103, 138, 127, 0.3);
 $homeMainBg: rgba(22, 22, 22, 0.85);
 $leftGradientCurrencyPage: #d7dde8;
 $rightGradientCurrencyPage: #757f9a;
-
-$creamy: rgba(248, 237, 235, 0.8);
-// $marketFooterBg: rgba(255, 255, 255, 0.1);
+$currencySymbol: rgba(255, 0, 0, 0.2);
 $marketFooterBg: lighten($white, 20%);
+$scrollbarHover: $lightRed;
+$scrollbar: rgba(22, 22, 22, 0.8);
 
+//* Sizes
 $headerHeight: 201px;
 $footerHeight: 56px;
+
+//* Layout
+$phone-sm: 360px;
+$phone-md: 414px;
+$phone-lg: 576px;
+$tablet: 768px;
+$desktop-sm: 1366px;
